// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StatusFlag> should render correctly with a bêta status 1`] = `
.c0 {
  font-size: 0.875rem;
  line-height: 1.5;
  padding-left: 0.2rem;
  font-weight: bold;
  color: #b42a27;
}

<span
  className="c0"
>
  Bêta
</span>
`;

exports[`<StatusFlag> should render correctly with a stable status 1`] = `
.c0 {
  font-size: 0.875rem;
  line-height: 1.5;
  padding-left: 0.2rem;
  font-weight: bold;
  color: #41a017;
}

<span
  className="c0"
>
  Stable
</span>
`;

exports[`<StatusFlag> should render correctly with a wip status 1`] = `
.c0 {
  font-size: 0.875rem;
  line-height: 1.5;
  padding-left: 0.2rem;
  font-weight: bold;
  color: #c86f21;
}

<span
  className="c0"
>
  WIP
</span>
`;
